deployments/monitoring/ingress-nginx-controller-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller-metrics
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx-controller-metrics
    app.kubernetes.io/part-of: manufacturing-scheduler
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  ports:
    - name: metrics
      port: 10254
      targetPort: 10254
